deploy-with-cm-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploy-with-cm
  name: deploy-with-cm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-with-cm
  strategy: {}
  template:
    metadata:
      labels:
        app: deploy-with-cm
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - echo hello world; sleep 3600
        image: busybox
        name: busybox
        volumeMounts:
        - name: testvol
          mountPath: /data
      volumes:
      - name: testvol
        configMap:
          name: cm-file
        # env: 
        # - name: APPNAME
        #   valueFrom:
        #     configMapKeyRef:
        #       name: cm-file
        #       key: app.properties
