initcontainer-orchestration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: helloworld-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helloworld-deployment
    spec:
      containers:
      - name: hello-world
        image: helloworld-webserver:1.0.0
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 64Mi
