multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multicont
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - ls; sleep 3600;
    image: busybox
    name: cont1
  - command:
    - /bin/sh
    - -c
    - echo Hello World; sleep 3600;
    image: busybox
    name: cont2
  - command:
    - /bin/sh
    - -c
    - echo This is the third container; sleep 3600;
    image: busybox
    name: cont3
