multitest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - while true; do echo ‘Hi I am from Main container’ >> /var/log/index.html; sleep
      5; done
    image: busybox
    name: busybox
    volumeMounts:
    - name: testvol
      mountPath: /var/log/
  - name: sidecar-nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: testvol
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: testvol
    emptyDir: {}
