nginx-manifest-subPath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
    - name: test
      image: nginx
      volumeMounts:
        # a mount for site-data
        - name: config
          mountPath: /usr/share/nginx/html
          subPath: path2
  volumes:
    - name: config
      persistentVolumeClaim:
        claimName: task-pv-claim
