nginx-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - image: nginx
    name: test
    ports:
    - containerPort: 80
  nodeSelector:
    env: prod
