podspec-with-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - echo hello world; echo $APPNAME; sleep 3600
    image: busybox
    name: testpod
