test-dep-29.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test2
  name: test2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test2
  strategy: {}
  template:
    metadata:
      labels:
        app: test2
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - echo Hello World | tee -a /data/data.txt; sleep 3600
        image: busybox
        name: busybox
        volumeMounts:
        - name: testvol
          mountPath: /data
      volumes:
      - name: testvol
        emptyDir: {}
