test-deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: my-deploy
  namespace: mars
spec:
  replicas: 2
  selector:
    matchLabels:
      run: test
  template:
    metadata:
      labels:
        run: test
      name: test
    spec:
      containers:
      - image: busybox
        name: test
