test-pod-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - echo hello world; sleep 3600
    image: busybox
    name: test
    volumeMounts:
    - name: test-vol
      mountPath: /data
  volumes:
  - name: test-vol
    secret:
      secretName: secret-vol
      items:
      - key: "password.txt"
        path: "password.txt"
    # env: 
    # - name : USERNAME
    #   valueFrom: 
    #     secretKeyRef:
    #       name: test
    #       key: username
    # - name: PASSWORD
    #   valueFrom:
    #     secretKeyRef:
    #       name: test
    #       key: password
